kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: securebank-service
  namespace: securebank

spec:
  selector:
    app: securebank-api

  ports:
  - port: 80
    targetPort: 5000

  type: NodePort
